--- a/exercises/assets/css/style-1.css
+++ b/exercises/assets/css/style-1.css
@@ -11,6 +11,7 @@ img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 /* ====== PADDING AROUND WEB PAGE BODY CONTENT ======  */
 /* Desktops */
+body { background-color: antiquewhite; }
 @media (min-width: 768px) {
     body { padding: 4% 20% }
  }
@@ -28,16 +29,20 @@ h1 {
 font-weight: normal;
 letter-spacing: -2px;
 margin-bottom: 32px;
+color: brown;
+
 }
 
 h2 {
     font-size: 36px;
     margin-bottom: 4px;
+    color: brown;
 }
 
 h3 {
     font-size: 24px;
     margin-bottom: 4px;
+    color: brown;
 }
 
 p {
@@ -45,4 +50,6 @@ p {
     font-family: sans-serif;
 line-height: 1.6;
 margin-bottom: 20px;
+a { color: brown; }
 }
+a { color: brown; }
