--- a/exercises/assets/css/style-3.css
+++ b/exercises/assets/css/style-3.css
@@ -12,6 +12,23 @@ input, button, textarea, select { font: inherit }
 section { padding: 4% 20% }
 /* Desktops */
 body { background-color: lightblue; }
+.section-1 {background-color:lemonchiffon;}
+
+
+.section-2 {background-color:lightgreen;}
+
+
+.section-3 {background-color:lightblue;}
+
+
+.section-4 {background-color:darkblue;}
+.section-4 h2,
+.section-4 p {color:white}
+
+
+.section-5 {background-color:lightcoral;}
+
+
 
 @media (min-width: 768px) {
     section { padding: 4% 20% }
@@ -38,3 +55,4 @@ p {
 
     
 }
+a { color: blue; }
