--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -23,8 +23,8 @@ h1, h2, h2 { color: #008000; letter-spacing: -2px; }
 
 /* Main heading */
 h1 {
-	font-family: sans-serif;
-	font-weight: bold;
+	font-family: 'Oswald', 'sans-serif';
+    font-weight: bold;
     font-size: 72px;
     line-height: 1.1;    
     margin-bottom: 30px;
@@ -32,17 +32,19 @@ h1 {
 
 /* Small headings */
 h2 {
-	font-family: sans-serif;
+	font-family: 'Oswald', sans-serif;
     font-weight: bold;
     font-size: 42px;
     line-height: 1.3;    
     margin-top: 42px;
     margin-bottom: 4px;
+    letter-spacing: 0,5 ;
 }
-
+img {margin-bottom: 32px;
+border: radius 15px;;}
 /* Text paragraphs */
 p {
-   font-family: sans-serif;
+   font-family: 'lato' sans-serif;
    font-size: 22px;
    color: #011301;
    line-height: 1.6;
