--- a/exercises/assets/css/style-4.css
+++ b/exercises/assets/css/style-4.css
@@ -67,3 +67,21 @@ p {
 }
 
 img {margin-bottom: 42px; box-shadow: 8px 10px 8px #888 red green blue }
+
+/* Passive link styles */
+            
+a:link, a:visited {
+    text-decoration: none;
+    padding-bottom: 2px;
+    color: #000;
+border-bottom: solid 2px #000;
+} 
+            
+/* Interactive link styles */
+            
+a:hover, a:focus, a:active {
+    text-decoration: none; 
+    padding-bottom: 2px;
+    color: #f26f21;
+border-bottom: solid 2px blue;
+}
