--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,7 +1,14 @@
-/* Add your custom CSS here */
 
-.section-selector-1 { background-color: var(--green-800) }
-.section-selector-2 { background-color: var(--gray-200) }
-.section-selector-4.theme-dark { background-color: var(--green-800) }
-.section-selector-4 div[class^='flex-cols-'] div[class^='col-'] figure.icon { color: var(--white-000) }
-body {font-family:'Playfair Display', serif }
+nav.theme-dark, nav.theme-dark ul.links-wrapper.active { background-color: #0f172a }
+
+header.theme-dark   { background-color: #0f172a }
+
+header.theme-dark  h1 { color: var(--sky-400); }
+
+section.theme-dark   { background-color: #0f172a }
+
+footer.theme-dark   { background-color: #0f172a }
+
+
+
+header .col-text h2, .col-1 > h3 { line-height: 1.8 }
