--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -38,13 +38,13 @@ h2 {
     line-height: 1.3;    
     margin-top: 42px;
     margin-bottom: 4px;
-    letter-spacing: 0,5 ;
+    letter-spacing: 0,5px ;
 }
 img {margin-bottom: 32px;
 border: radius 15px;;}
 /* Text paragraphs */
 p {
-   font-family: 'lato' sans-serif;
+   font-family: 'Lato', sans-serif;
    font-size: 22px;
    color: #011301;
    line-height: 1.6;
