--- a/exercises/assets/css/style-9.css
+++ b/exercises/assets/css/style-9.css
@@ -11,6 +11,25 @@ input, button, textarea, select { font: inherit }
 
 /* ================= ENDS ================ */
 
+h1 
+
+{font-family: "Roboto",sans-serif;
+font-size: 64px;
+text-align: center;
+letter-spacing: -1px;
+margin-bottom: 64px;}
+
+h3
+
+{font-family: "Roboto", sans-serif;
+font-size: 28px; 
+margin-bottom: 2px;}
+
+p{ font-family: "Roboto", sans-serif;
+font-size: 18px;
+color: #696969;
+line-height: 1.5}
+
 /* ==== Web page width ==== */
 
 /* Desktops */
