--- a/portfolio/fashion/assets/css/custom.css
+++ b/portfolio/fashion/assets/css/custom.css
@@ -5,3 +5,10 @@
 .section-selector-4.theme-dark { background-color: var(--green-800) }
 .section-selector-4 div[class^='flex-cols-'] div[class^='col-'] figure.icon { color: var(--white-000) }
 body {font-family:'Playfair Display', serif }
+
+.theme-dark.section-selector-1 a:link,
+.theme-dark.section-selector-1 a:visited { color: var(--green-200) }
+
+.theme-dark.section-selector-1 a:focus,
+.theme-dark.section-selector-1 a:hover,
+.theme-dark.section-selector-1 a:active { color: var(--white-000) }
