--- a/portfolio/crypto-wallet/assets/css/custom.css
+++ b/portfolio/crypto-wallet/assets/css/custom.css
@@ -10,8 +10,14 @@ header h1 {font-size: var(--font-size-xxx1);}
 .section-selector-3.theme-light { background-color: var(--trend-700) }
 .section-selector-4.theme-light { background-color: var(--trend-700) }
 .section-selector-4 div[class^='flex-cols-'] div[class^='col-'] figure.icon { color: var(--blue-300) }
+.section-selector-3 > .badge span { color: var(--white-000) }
 
+.section-selector-1 h2
 .section-selector-1 h2
 .section-selector-2 h2
 .section-selector-3 h2
-.section-selector-4 h2 {font height: 400;}
+.section-selector-4 h2 {font-weight: 400}
+
+
+
+
